[gd_scene load_steps=126 format=2]

[ext_resource path="res://man/bear.gd" type="Script" id=1]
[ext_resource path="res://ui/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://anim/2t-crazy-bear-4.png" type="Texture" id=3]
[ext_resource path="res://anim/2t-crazy-bear-5.png" type="Texture" id=4]
[ext_resource path="res://anim/2-bear-woman0000.png" type="Texture" id=5]
[ext_resource path="res://anim/2-bear-woman0001.png" type="Texture" id=6]
[ext_resource path="res://anim/2-bear-woman0002.png" type="Texture" id=7]
[ext_resource path="res://anim/2-bear-woman0003.png" type="Texture" id=8]
[ext_resource path="res://anim/2-bear-man0000.png" type="Texture" id=9]
[ext_resource path="res://anim/2-bear-man0001.png" type="Texture" id=10]
[ext_resource path="res://anim/2-bear-man0002.png" type="Texture" id=11]
[ext_resource path="res://anim/2-bear-man0003.png" type="Texture" id=12]
[ext_resource path="res://anim/2t-crazy-bear-woman0000.png" type="Texture" id=13]
[ext_resource path="res://anim/2t-crazy-bear-woman0001.png" type="Texture" id=14]
[ext_resource path="res://anim/2t-crazy-bear-woman0002.png" type="Texture" id=15]
[ext_resource path="res://anim/2t-crazy-bear-woman0003.png" type="Texture" id=16]
[ext_resource path="res://anim/2t-crazy-bear-woman-end0000.png" type="Texture" id=17]
[ext_resource path="res://anim/2t-crazy-bear-woman-end0004.png" type="Texture" id=18]
[ext_resource path="res://anim/2t-crazy-bear-woman-end0005.png" type="Texture" id=19]
[ext_resource path="res://anim/2t-crazy-bear-woman-end0006.png" type="Texture" id=20]
[ext_resource path="res://anim/2t-crazy-bear-man-bg.png" type="Texture" id=21]
[ext_resource path="res://anim/2t-crazy-bear-0.png" type="Texture" id=22]
[ext_resource path="res://anim/2t-crazy-bear0000.png" type="Texture" id=23]
[ext_resource path="res://anim/2t-crazy-bear0001.png" type="Texture" id=24]
[ext_resource path="res://anim/2t-crazy-bear0002.png" type="Texture" id=25]
[ext_resource path="res://anim/2t-crazy-bear0003.png" type="Texture" id=26]
[ext_resource path="res://anim/2t-kill-bear-man0004.png" type="Texture" id=27]
[ext_resource path="res://anim/2t-kill-bear-man0005.png" type="Texture" id=28]
[ext_resource path="res://anim/2t-kill-bear-man0006.png" type="Texture" id=29]
[ext_resource path="res://anim/2t-kill-bear-man0007.png" type="Texture" id=30]
[ext_resource path="res://anim/2t-kill-bear-man0008.png" type="Texture" id=31]
[ext_resource path="res://anim/2t-kill-bear-man0009.png" type="Texture" id=32]
[ext_resource path="res://anim/2t-kill-bear-man-2-0001.png" type="Texture" id=33]
[ext_resource path="res://anim/2t-kill-bear-man-2-0002.png" type="Texture" id=34]
[ext_resource path="res://anim/2t-kill-bear-man-2-0003.png" type="Texture" id=35]
[ext_resource path="res://anim/2t-kill-bear-man-2-0004.png" type="Texture" id=36]
[ext_resource path="res://anim/2t-kill-bear-man-2-0005.png" type="Texture" id=37]
[ext_resource path="res://anim/2t-kill-bear-man-2-0006.png" type="Texture" id=38]
[ext_resource path="res://anim/2t-kill-bear-man-2-0007.png" type="Texture" id=39]
[ext_resource path="res://anim/2t-kill-bear-man-2-0008.png" type="Texture" id=40]
[ext_resource path="res://anim/2t-kill-bear-man-2-0009.png" type="Texture" id=41]
[ext_resource path="res://anim/2t-kill-bear-man-2-0010.png" type="Texture" id=42]
[ext_resource path="res://anim/2t-kill-bear-man-2-0011.png" type="Texture" id=43]
[ext_resource path="res://anim/2t-kill-bear-man-2-0012.png" type="Texture" id=44]
[ext_resource path="res://anim/2t-kill-bear-man-2-0013.png" type="Texture" id=45]
[ext_resource path="res://anim/2t-kill-bear-man-2-0014.png" type="Texture" id=46]
[ext_resource path="res://anim/2t-kill-bear-man-2-0015.png" type="Texture" id=47]
[ext_resource path="res://anim/2t-kill-bear-man-2-0016.png" type="Texture" id=48]
[ext_resource path="res://anim/2t-kill-bear-man-2-0017.png" type="Texture" id=49]
[ext_resource path="res://anim/2t-kill-bear-man-2-0018.png" type="Texture" id=50]
[ext_resource path="res://anim/2t-kill-bear-man-2-0019.png" type="Texture" id=51]
[ext_resource path="res://anim/2t-kill-bear-man-2-0020.png" type="Texture" id=52]
[ext_resource path="res://anim/2t-kill-bear-man-2-0021.png" type="Texture" id=53]
[ext_resource path="res://anim/2t-kill-bear-man-2-0022.png" type="Texture" id=54]
[ext_resource path="res://anim/2t-kill-bear-man-2-0023.png" type="Texture" id=55]
[ext_resource path="res://anim/2t-kill-bear-man-2-0024.png" type="Texture" id=56]
[ext_resource path="res://anim/2t-kill-bear-man-2-0025.png" type="Texture" id=57]
[ext_resource path="res://anim/2t-kill-bear-man-2-0026.png" type="Texture" id=58]
[ext_resource path="res://anim/2t-kill-bear-man-2-0027.png" type="Texture" id=59]
[ext_resource path="res://anim/2t-kill-bear-man-2-0028.png" type="Texture" id=60]
[ext_resource path="res://anim/2t-kill-bear-man-2-0029.png" type="Texture" id=61]
[ext_resource path="res://anim/2t-kill-bear-man-2-0030.png" type="Texture" id=62]
[ext_resource path="res://anim/2t-kill-bear-man-2-0031.png" type="Texture" id=63]
[ext_resource path="res://anim/2t-kill-bear-man-2-0032.png" type="Texture" id=64]
[ext_resource path="res://anim/2t-kill-bear-man-2-0033.png" type="Texture" id=65]
[ext_resource path="res://anim/2t-kill-bear-man-2-0034.png" type="Texture" id=66]
[ext_resource path="res://anim/2t-kill-bear-man-2-0035.png" type="Texture" id=67]
[ext_resource path="res://anim/2t-kill-bear-woman0000.png" type="Texture" id=68]
[ext_resource path="res://anim/2t-kill-bear-woman0001.png" type="Texture" id=69]
[ext_resource path="res://anim/2t-kill-bear-woman0002.png" type="Texture" id=70]
[ext_resource path="res://anim/2t-kill-bear-woman0003.png" type="Texture" id=71]
[ext_resource path="res://anim/2t-kill-bear-woman0004.png" type="Texture" id=72]
[ext_resource path="res://anim/2t-kill-bear-woman0005.png" type="Texture" id=73]
[ext_resource path="res://anim/2t-kill-bear-woman0006.png" type="Texture" id=74]
[ext_resource path="res://anim/2t-kill-bear-woman0007.png" type="Texture" id=75]
[ext_resource path="res://anim/2t-kill-bear-woman0008.png" type="Texture" id=76]
[ext_resource path="res://anim/2t-kill-bear-woman0009.png" type="Texture" id=77]
[ext_resource path="res://anim/2t-kill-bear-woman0010.png" type="Texture" id=78]
[ext_resource path="res://anim/2t-kill-bear-woman0011.png" type="Texture" id=79]
[ext_resource path="res://anim/2t-kill-bear-woman0012.png" type="Texture" id=80]
[ext_resource path="res://anim/2t-kill-bear-woman0013.png" type="Texture" id=81]
[ext_resource path="res://anim/2t-kill-bear-woman0014.png" type="Texture" id=82]
[ext_resource path="res://anim/2t-kill-bear-woman0015.png" type="Texture" id=83]
[ext_resource path="res://anim/2t-kill-bear-woman0016.png" type="Texture" id=84]
[ext_resource path="res://anim/2t-kill-bear-woman0017.png" type="Texture" id=85]
[ext_resource path="res://anim/2t-kill-bear-woman0018.png" type="Texture" id=86]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0000.png" type="Texture" id=87]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0001.png" type="Texture" id=88]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0002.png" type="Texture" id=89]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0003.png" type="Texture" id=90]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0004.png" type="Texture" id=91]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0005.png" type="Texture" id=92]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0006.png" type="Texture" id=93]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0007.png" type="Texture" id=94]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0008.png" type="Texture" id=95]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0009.png" type="Texture" id=96]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0010.png" type="Texture" id=97]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0011.png" type="Texture" id=98]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0012.png" type="Texture" id=99]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0013.png" type="Texture" id=100]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0014.png" type="Texture" id=101]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0015.png" type="Texture" id=102]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0016.png" type="Texture" id=103]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0017.png" type="Texture" id=104]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0018.png" type="Texture" id=105]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0019.png" type="Texture" id=106]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0020.png" type="Texture" id=107]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0021.png" type="Texture" id=108]
[ext_resource path="res://anim/2t-kill-bear-woman-2-0022.png" type="Texture" id=109]
[ext_resource path="res://ui/repeat-tuto.tscn" type="PackedScene" id=110]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=111]
[ext_resource path="res://ui/HUD2.tscn" type="PackedScene" id=112]

[sub_resource type="Animation" id=1]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Crazy_bear_bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -423, 360 ), Vector2( 420.432, 360 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "KillBearIn"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Kill_bear_man_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -316.774, 360 ), Vector2( 385.445, 360 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "KillBearTimer"
length = 1.17
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("KillBearTimer/NodeKillBearTimer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=9]

animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=10]

animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=11]

animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), null, null, null, null, null, null, null, null, null ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=12]

animations = [ {
"frames": [ ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 86 ), ExtResource( 86 ), ExtResource( 86 ), ExtResource( 86 ), ExtResource( 86 ), ExtResource( 86 ), ExtResource( 86 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=13]

animations = [ {
"frames": [ ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[node name="bear" type="Node2D"]

script = ExtResource( 1 )

[node name="CrazyBearInAnimation" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/CrazyBearIn = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options" ]

[node name="KillBearInAnimation" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/KillBearIn = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options" ]

[node name="KillBearTimer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/KillBearTimer = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="NodeKillBearTimer" type="Node2D" parent="KillBearTimer"]

_sections_unfolded = [ "Transform" ]

[node name="background" parent="." instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="Crazy_bear_end" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 377.181, 472.783 )
frames = SubResource( 4 )
animation = "default"

[node name="Anim_bear_woman" type="AnimatedSprite" parent="."]

position = Vector2( 919.823, 337.132 )
frames = SubResource( 5 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="Anim_bear_man" type="AnimatedSprite" parent="."]

position = Vector2( 413.05, 353.821 )
frames = SubResource( 6 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="Woman_bg" type="ColorRect" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Woman_fear" type="AnimatedSprite" parent="Woman_bg"]

position = Vector2( 409.46, 399.894 )
frames = SubResource( 7 )
animation = "default"

[node name="Woman_run" type="AnimatedSprite" parent="Woman_bg"]

visible = false
position = Vector2( 401.31, 263.913 )
frames = SubResource( 8 )
animation = "default"

[node name="Crazy_bear_bg" type="Sprite" parent="."]

position = Vector2( -423, 360 )
texture = ExtResource( 21 )
_sections_unfolded = [ "Transform" ]

[node name="Crazy_bear_in" type="Sprite" parent="Crazy_bear_bg"]

position = Vector2( -64.5383, -55.4515 )
texture = ExtResource( 22 )

[node name="Crazy_bear" type="AnimatedSprite" parent="Crazy_bear_bg"]

visible = false
position = Vector2( 219.107, -0.221954 )
frames = SubResource( 9 )
animation = "default"
frame = 3
playing = true
_sections_unfolded = [ "Transform" ]

[node name="Kill_bear_man" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 415.843, 352.753 )
frames = SubResource( 10 )
animation = "default"

[node name="Kill_bear_man_2" type="AnimatedSprite" parent="."]

position = Vector2( -316.774, 360 )
frames = SubResource( 11 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Kill_bear_woman" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 962.011, 327.799 )
frames = SubResource( 12 )
animation = "default"

[node name="Kill_bear_woman_wait" type="Sprite" parent="."]

visible = false
position = Vector2( 879.189, 360 )
texture = ExtResource( 87 )
_sections_unfolded = [ "Transform" ]

[node name="Kill_bear_woman_2" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 879.189, 360 )
frames = SubResource( 13 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Button_man" type="TextureButton" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_top = 23.0
margin_right = 601.0
margin_bottom = 679.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="Button_woman" type="TextureButton" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 22.0
margin_right = 1116.0
margin_bottom = 645.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="repeat-tuto" parent="." instance=ExtResource( 110 )]

position = Vector2( 80, 0 )

[node name="HUD" parent="." instance=ExtResource( 111 )]

[node name="HUD2" parent="." instance=ExtResource( 112 )]

_sections_unfolded = [ "Visibility" ]

[connection signal="animation_finished" from="CrazyBearInAnimation" to="." method="_on_CrazyBearInAnimation_animation_finished"]

[connection signal="animation_finished" from="KillBearTimer" to="." method="_on_KillBearTimer_animation_finished"]

[connection signal="animation_finished" from="Crazy_bear_end" to="." method="_on_Crazy_bear_end_animation_finished"]

[connection signal="animation_finished" from="Woman_bg/Woman_fear" to="." method="_on_Woman_fear_animation_finished"]

[connection signal="animation_finished" from="Woman_bg/Woman_run" to="." method="_on_Woman_run_animation_finished"]

[connection signal="animation_finished" from="Kill_bear_man" to="." method="_on_Kill_bear_man_animation_finished"]

[connection signal="animation_finished" from="Kill_bear_man_2" to="." method="_on_Kill_bear_man_2_animation_finished"]

[connection signal="animation_finished" from="Kill_bear_woman" to="." method="_on_Kill_bear_woman_animation_finished"]

[connection signal="pressed" from="Button_man" to="." method="_on_Button_man_pressed"]

[connection signal="pressed" from="Button_woman" to="." method="_on_Button_woman_pressed"]


